[package]
name = "neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
nightly = ["nvim-oxi/neovim-nightly"]
test = ["nvim-oxi/test"]

[dependencies]
async-task = "4.7"
cauchy = { workspace = true }
compact_str = { workspace = true }
concurrent-queue = "2.5"
derive_more = { workspace = true }
ed = { workspace = true, features = ["os-fs"] }
neovim-macros = { path = "./macros" }
nohash = { workspace = true }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = [
  "libuv",
  "mlua",
  "neovim-0-10",
  "__vendored_luajit",
] }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_path_to_error = "0.1"
slotmap = { workspace = true }
smallvec = { workspace = true, features = ["const_new"] }
strsim = { workspace = true }
thread-pool = { workspace = true }

[lints]
workspace = true
