[package]
name = "neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
nightly = ["nvim-oxi/neovim-nightly"]
test = ["nvim-oxi/test", "nvim-oxi/test-terminator"]
tracing = ["dep:flume", "dep:tracing-subscriber"]

[dependencies]
abs-path = { workspace = true }
async-task = { workspace = true }
cauchy = { workspace = true }
compact_str = { workspace = true }
concurrent-queue = { workspace = true }
derive_more = { workspace = true }
editor = { workspace = true }
executor = { workspace = true, features = ["async-task"] }
fs = { workspace = true }
neovim-macros = { path = "./macros" }
nohash = { workspace = true }
nvim-oxi = { workspace = true, features = ["libuv", "mlua", "neovim-0-11"] }
real-fs = { workspace = true }
serde = { workspace = true }
serde_path_to_error = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true, features = ["const_new"] }
strsim = { workspace = true }
thread-pool = { workspace = true }
tracing = { workspace = true }

flume = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[lints]
workspace = true
