[package]
name = "nomad-collab-params"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["serde"]
github-authenticator = ["dep:collab-types", "dep:reqwest", "dep:url"]
serde = ["dep:serde"]

[dependencies]
auth-types = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
collab-server = { workspace = true }
derive_more = { workspace = true }
ulid = { workspace = true, features = ["serde"] }

collab-types = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true, optional = true, features = ["derive"] }
url = { workspace = true, optional = true }

[lints]
workspace = true
