[package]
name = "nomad-collab-params"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["serde"]
github-authenticator = [
  "dep:collab-types",
  "dep:http",
  "dep:http-client",
  "dep:serde_json",
  "dep:url",
]
serde = ["dep:serde"]

[dependencies]
auth-types = { workspace = true, features = ["serde"] }
cauchy = { workspace = true }
collab-server = { workspace = true }
derive_more = { workspace = true }
ulid = { workspace = true, features = ["serde"] }

collab-types = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-client = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[lints]
workspace = true
