[package]
name = "nomad-collab-params"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
auth-types = { workspace = true }
cauchy = { workspace = true }
collab-server = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
ulid = { workspace = true, features = ["serde"] }

serde = { workspace = true, optional = true, features = ["derive"] }

[lints]
workspace = true
