[package]
name = "nomad-neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]
name = "nomad"

[features]
neovim-nightly = ["neovim/nightly"]

[dependencies]
auth = { workspace = true, features = ["neovim"] }
collab = { workspace = true, features = ["neovim"] }
ed = { workspace = true }
neovim = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
version = { workspace = true }

[lints]
workspace = true
