[package]
name = "nomad-neovim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]
name = "nomad"

[features]
neovim-nightly = ["neovim/nightly"]

[dependencies]
abs-path = { workspace = true, features = ["macros"] }
auth = { workspace = true, features = ["neovim"] }
cauchy = { workspace = true }
collab = { workspace = true, features = ["neovim"] }
ed = { workspace = true }
either = { workspace = true }
neovim = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["chrono"] }
version = { workspace = true }

[lints]
workspace = true
