[package]
name = "nomad"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["neovim"]
neovim-nightly = []
neovim = []

[dependencies]
async-broadcast = "0.7"
collab-fs = { workspace = true }
compact_str = { workspace = true }
flume = { version = "0.11", features = ["async"] }
futures-util = { workspace = true }
fxhash = "0.2"
nohash = { workspace = true }
nomad-macros = { path = "./macros" }
serde = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }

# Instrumentation-related dependencies.
home = "0.5"
time = { version = "0.3", features = ["macros"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["time"] }

# Neovim-specific dependencies.
async-task = "4.7"
concurrent-queue = "2.4"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["libuv", "neovim-0-10" ] }
pin-project-lite = { workspace = true }
serde_path_to_error = "0.1"


[lints]
workspace = true
