[package]
name = "nomad2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
collab-fs = { workspace = true }
futures-util = { workspace = true }
nomad-macros = { path = "./macros" }
serde = { workspace = true }
smol_str = { workspace = true }

# Neovim-specific dependencies.
async-task = "4.7"
concurrent-queue = "2.4"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["libuv", "neovim-0-10" ] }
pin-project-lite = "0.2"
serde_path_to_error = "0.1"


[lints]
workspace = true
