[package]
name = "mad"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["neovim-0-9"]

neovim-0-9 = [
    "common/neovim-0-9",
    "nvim-oxi/neovim-0-9",
]
neovim-nightly = [
    "common/neovim-nightly",
    "nvim-oxi/neovim-nightly",
]

[dependencies]
common = { path = "../nvim-common" }
seph = { path = "../nvim-seph" }

nvim-oxi = { workspace = true }
serde = { workspace = true }
serde_path_to_error = "0.1"
thiserror = { workspace = true }
