[package]
name = "thread-pool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ed = { workspace = true }
flume = { workspace = true }
futures-executor = { workspace = true, features = ["thread-pool"] }
pin-project-lite = { workspace = true }

[lints]
workspace = true
